--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "scripts": {
     "build": "esbuild",
     "deploy": "serverless deploy",
-    "deploy:dev": "serverless deploy --stage dev",
-    "deploy:prod": "serverless deploy --stage prod",
+    "deploy:dev": "serverless deploy --stage dev --verbose",
+    "deploy:prod": "serverless deploy --stage prod --verbose",
     "remove": "serverless remove",
     "offline": "serverless offline",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix"
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "debug": "SLS_DEBUG=* serverless deploy --stage dev --verbose",
+    "debug:print": "SLS_DEBUG=* serverless print --stage dev",
+    "info": "serverless info --stage dev --verbose",
+    "doctor": "serverless doctor"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.423.0",
@@ -29,21 +33,24 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.119",
-    "@types/jest": "^29.5.5",
+    "@types/aws-lambda": "^8.10.152",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.5.0",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
+    "aws-sdk-mock": "^6.2.1",
     "esbuild": "^0.19.12",
     "eslint": "^8.47.0",
-    "jest": "^29.6.2",
+    "jest": "^29.7.0",
     "serverless": "^3.34.0",
     "serverless-esbuild": "^1.52.1",
     "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-offline": "^12.0.4",
-    "ts-jest": "^29.1.1",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.4",
     "typescript": "^5.1.6"
   }
 }
